<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/manualAutoToggleBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:paddingStart="10dp"
        android:background="@drawable/btd"
        android:textColor="#ffffff"
        android:switchPadding="-220dp"
        android:text="@string/manual"
        android:textAlignment="center"
        android:textOff="@string/manual"
        android:textOn="@string/auto"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="center_horizontal"
        android:paddingEnd="150dp"
        android:paddingRight="150dp"
        android:paddingLeft="10dp" />

    <ImageButton
        android:id="@+id/exploredImageBtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateButton"
        app:srcCompat="@drawable/ic_check"
        android:contentDescription="@string/check"
        android:background="@drawable/btd"
        android:textColor="#ffffff"/>

    <ImageButton
        android:id="@+id/directionChangeImageBtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/obstacleImageBtn"
        app:layout_constraintTop_toBottomOf="@+id/updateButton"
        android:tint="@color/colorBlack"
        app:srcCompat="@drawable/directionpic"
        android:contentDescription="@string/direction"
        android:background="@drawable/btd"
        android:textColor="#ffffff"/>

    <ImageButton
        android:id="@+id/obstacleImageBtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"

        app:layout_constraintStart_toEndOf="@+id/exploredImageBtn"
        app:layout_constraintTop_toBottomOf="@+id/updateButton"
        app:srcCompat="@drawable/ic_arrow_error"
        android:contentDescription="@string/error"
        android:background="@drawable/btd"
        android:textColor="#ffffff"/>

    <ImageButton
        android:id="@+id/clearImageBtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toEndOf="@+id/directionChangeImageBtn"
        app:layout_constraintTop_toBottomOf="@+id/updateButton"
        app:srcCompat="@drawable/ic_clear"
        android:contentDescription="@string/clear"
        android:background="@drawable/btd"
        android:textColor="#ffffff"/>

    <ToggleButton
        android:id="@+id/setStartPointToggleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textOff="@string/sstartpt"
        android:textOn="@string/cancel"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetMapBtn"
        android:gravity="center_horizontal"
        android:background="@drawable/btd"
        android:textColor="#ffffff"/>

    <ToggleButton
        android:id="@+id/setWaypointToggleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="28dp"
        android:textAlignment="center"
        android:textOff="@string/swaypt"
        android:textOn="@string/cancel"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setStartPointToggleBtn"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="center_horizontal"
        android:background="@drawable/btd"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/resetMapBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/rmap"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/btd"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:text="@string/update"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manualAutoToggleBtn"
        android:gravity="center_horizontal"
        android:focusable="true"
        android:background="@drawable/btd"
        android:textColor="#ffffff"/>

</androidx.constraintlayout.widget.ConstraintLayout>