<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/calibrateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/btd"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/calibrate"
        android:textColor="#ffffff"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fastestToggleBtn" />

    <Switch
        android:id="@+id/phoneTiltSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/btd"
        android:splitTrack="false"
        android:text="@string/TOff"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backImageBtn" />

    <ImageButton
        android:id="@+id/rightImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="384dp"
        android:layout_marginRight="384dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toEndOf="@+id/leftImageBtn"
        app:layout_constraintTop_toBottomOf="@+id/forwardImageBtn"
        app:srcCompat="@drawable/ic_arrow_move_right"
        android:contentDescription="@string/right"
        android:background="@drawable/btd"
        android:textColor="#ffffff"/>

    <ImageButton
        android:id="@+id/backImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forwardImageBtn"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_arrow_move_backward"
        android:contentDescription="@string/down"
        android:background="@drawable/btd"
        />

    <ImageButton
        android:id="@+id/leftImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forwardImageBtn"
        app:srcCompat="@drawable/ic_arrow_move_left"
        android:contentDescription="@string/left"
        android:background="@drawable/btd"
       />

    <ImageButton
        android:id="@+id/forwardImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fastestTextView"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_move_forward"
        android:contentDescription="@string/up"
        android:background="@drawable/btd"
       />

    <ImageButton
        android:id="@+id/exploreResetImageBtn"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toEndOf="@+id/exploreToggleBtn"
        app:layout_constraintTop_toBottomOf="@+id/fastestTimeTextView"
        app:srcCompat="@drawable/ic_refresh"
        android:contentDescription="@string/refresh"
        android:background="@drawable/btd"
      />

    <ToggleButton
        android:id="@+id/exploreToggleBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/exploration"
        android:textOff="@string/explore"
        android:textOn="@string/stop"
        app:layout_constraintStart_toEndOf="@+id/rightImageBtn"
        app:layout_constraintTop_toBottomOf="@+id/exploreTimeTextView"
        android:background="@drawable/btd"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/exploreTextView"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/etime"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/fastestTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/rightImageBtn"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:background="@drawable/circle"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/fastestTimeTextView"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="92dp"
        android:gravity="center"
        android:text="@string/dtime"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/fastestResetImageBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fastestTextView"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginEnd="12dp"
        android:background="@drawable/circle"
        android:textColor="#ffffff"/>

    <ToggleButton
        android:id="@+id/fastestToggleBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/fastest"
        android:textOff="@string/fastest"
        android:textOn="@string/stop"
        app:layout_constraintStart_toEndOf="@+id/rightImageBtn"
        app:layout_constraintTop_toBottomOf="@+id/exploreToggleBtn"
        android:background="@drawable/btd"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/exploreTimeTextView"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:gravity="center"
        android:text="@string/dtime"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/fastestTimeTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/rightImageBtn"
        app:layout_constraintTop_toBottomOf="@+id/exploreTextView"
        android:background="@drawable/circle"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/fastestTextView"
        android:layout_width="157dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:text="@string/fpath"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="12dp"
        android:background="@drawable/circle"
        android:textColor="#ffffff"/>

    <ImageButton
        android:id="@+id/fastestResetImageBtn"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toEndOf="@+id/fastestToggleBtn"
        app:layout_constraintTop_toBottomOf="@+id/exploreResetImageBtn"
        android:contentDescription="@string/refresh"
        app:srcCompat="@drawable/ic_refresh"
        android:background="@drawable/btd"
        android:textColor="#ffffff"/>

</androidx.constraintlayout.widget.ConstraintLayout>