<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reconfigure_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mdp_group14.ui.main.ReconfigureFragment">

    <TextView
        android:id="@+id/reconfigureTitleTextView"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/reconfiguration"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/f1TitleTextView"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/f1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reconfigureTitleTextView" />

    <EditText
        android:id="@+id/f2ValueEditText"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="64dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/f2Placeholder"
        android:inputType="textShortMessage|textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/f2TitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/f1ValueEditText"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/f2TitleTextView"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/f2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f1TitleTextView" />

    <EditText
        android:id="@+id/f1ValueEditText"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="64dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/f1Placeholder"
        android:inputType="textShortMessage|textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/f1TitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/reconfigureTitleTextView"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/cancelReconfigureBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/btd"
        android:text="@string/cancel"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f2ValueEditText"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="18dp"
        android:text="@string/save"
        android:textSize="24sp"
        android:background="@drawable/btd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cancelReconfigureBtn"
        app:layout_constraintTop_toBottomOf="@+id/f2ValueEditText"
        app:layout_constraintVertical_bias="0.044" />


</androidx.constraintlayout.widget.ConstraintLayout>
