<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/directionFragmentTitleTextView"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/CDirection"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/directionTitleTextView"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/direction"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directionFragmentTitleTextView" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:onClick="Save"
        android:text="@string/save"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toEndOf="@+id/cancelDirectionBtn"
        app:layout_constraintTop_toBottomOf="@+id/directionDropdownSpinner"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:id="@+id/cancelDirectionBtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="8dp"
        android:onClick="Cancel"
        android:text="@string/cancel"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directionTitleTextView"
        app:layout_constraintVertical_bias="0.05" />

    <Spinner
        android:id="@+id/directionDropdownSpinner"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:minWidth="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/directionTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/directionFragmentTitleTextView" />

</androidx.constraintlayout.widget.ConstraintLayout >
