<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mdp_group14.ui.main.MapInfo"
    android:background="@drawable/bgg">

    <TextView
        android:id="@+id/mapTitleTextView"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/mapinfo"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        android:textColor="#ffffff"

        />

    <view
        android:id="@+id/mapInformationView"
        class="com.example.mdp_group14.ui.main.GridView"
        android:layout_width="500dp"
        android:layout_height="650dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapTitleTextView"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="25dp"
        android:background="#ffffff"

       />

    <ToggleButton
        android:id="@+id/obstacleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/SObstacle"
        android:textOn="@string/SExplored"
        android:background="@drawable/btd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapInformationView"

        />

</androidx.constraintlayout.widget.ConstraintLayout>
